# wolframite

./: Cargo.toml  build.rs  url_pools.sh
capn-wiki/: Cargo.toml  build.rs
capn-wiki/src/: lib.rs  wiki.capnp
fridge/: P625.rs  extract_text.rs  properties.rs  to_csv.rs  url_pools.rs
src/: cap.rs  capitanize_wiki.rs  capitanize_wikidata.rs  helpers.rs  lib.rs  mapred.rs  wiki.rs  wikidata.rs
src/schema/: wiki.capnp
url_aggregator/: Cargo.toml
url_aggregator/src/: lib.rs
