[package]
name = "wolframite"
version = "0.1.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]

[dependencies]
error-chain = "*"
rustc-serialize = "*"
reqwest = "*"
glob = "*"
regex = "*"
bzip2 = "*"
xml-rs = "*"
snappy_framed = "*"
capnp = "*"
simple_parallel = "0.2"
num_cpus = "0.2.6"
serde = "*"
serde_json = "*"
flate2 = "0.2.7"
scan_fmt = "*"
pad = "*"
itertools = "*"
time = "0.1"
clap = { version = "2.9", features = [ "unstable" ] }
nom = "*"
byteorder = "0.4.2"
tinycdb = "*"

#[dependencies.scan_mac]
#git = "https://github.com/mahkoh/scan"

[dependencies.capn-wiki]
path = "capn-wiki"

[dependencies.url_aggregator]
path = "url_aggregator"
